--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,15 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.4",
     "@nestjs/websockets": "^10.3.4",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "mongoose": "^8.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
